<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab3Act</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_view">Profile View:</string>
    <string name="button_change">Change</string>
    <string name="title_activity_camera_control">CameraControlActivity</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter your name here:</string>
    <string name="email">Email:</string>
    <string name="your_email">Your email</string>
    <string name="phone">Phone:</string>
    <string name="your_phone">Your phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="class_">Class:</string>
    <string name="class_hint">"e.g., 2012"</string>
    <string name="major">Major:</string>
    <string name="major_hint">Your major here</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_photo_file_name">photo</string>

</resources>
